--- a/easeui/res/values-zh-rCN/ease_strings.xml
+++ b/easeui/res/values-zh-rCN/ease_strings.xml
@@ -110,6 +110,7 @@
     <string name="To_join_the_chat">加入群聊</string>
     <string name="login">登录</string>
     <string name="user_name">用户名</string>
+    <string name="nick">昵称</string>
     <string name="password">密码</string>
     <string name="register">注册</string>
     <string name="confirmpassword">确认密码</string>
