--- a/ChatDemoUI3.0/res/layout/em_activity_login.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_login.xml
@@ -100,17 +100,18 @@
         </LinearLayout>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/em_button_register_bg"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:onClick="register"
                 android:text="@string/register"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
+                android:layout_marginLeft="200dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="30dp" />
+                android:layout_marginBottom="80dp" />
     </RelativeLayout>
 
 </LinearLayout>
