--- a/ChatDemoUI3.0/res/layout/em_activity_splash.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_splash.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/colorPrimary" >
+    android:background="#232325" >
 
     <ImageView
         android:layout_width="90dp"
