--- a/ChatDemoUI3.0/res/layout/view_layout_title.xml
+++ b/ChatDemoUI3.0/res/layout/view_layout_title.xml
@@ -2,12 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@color/colorPrimary">
+    android:background="#232325">
 
     <TextView
         android:id="@+id/txt_left"
-        style="@style/txt_titleStyle1"
-        android:textSize="17sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:visibility="gone"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
@@ -25,7 +27,10 @@
 
     <TextView
         android:id="@+id/txt_title"
-        style="@style/txt_titleStyle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
         android:text="@string/app_name"
         android:visibility="gone"
         android:layout_centerInParent="true"  />
@@ -43,19 +48,24 @@
 
     <TextView
         android:id="@+id/txt_right"
-        style="@style/txt_titleStyle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
         android:textSize="16sp"
         android:visibility="gone"
-        android:text="@string/menu_addfriend"
+        android:text="添加朋友"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"  />
 
     <Button
         android:id="@+id/btn_send"
-        style="@style/btn_titleStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
         android:visibility="gone"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:text="@string/addcontact_send_msg"/>
+        android:text="发送"/>
 </RelativeLayout>
