--- a/ChatDemoUI3.0/res/layout/em_activity_main.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/layout_viewpage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layout_title">
+        android:layout_below="@id/layout_title"
+        android:paddingBottom="48dp">
     </cn.ucai.superwechat.widget.MFViewPager>
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,6 +25,7 @@
             android:background="#D6DCDC"/>
 
         <cn.ucai.superwechat.widget.DMTabHost
+            android:id="@+id/layout_tabhost"
             android:layout_width="match_parent"
             android:layout_height="47dp">
             <cn.ucai.superwechat.widget.DMTabButton
