--- a/ChatDemoUI3.0/res/layout/main_tab_bottom_item.xml
+++ b/ChatDemoUI3.0/res/layout/main_tab_bottom_item.xml
@@ -35,7 +35,7 @@
             android:layout_alignParentRight="true"
             android:background="@drawable/tip_round_red_bg_shape"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="#ffffff"
             android:textSize="11sp"
             android:visibility="gone" />
     </RelativeLayout>
