项目最后优化

--- a/ChatDemoUI3.0/res/layout/em_activity_edit.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_edit.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
-        android:background="@color/common_top_bar_blue"
+        android:background="#232325"
         android:gravity="center_vertical" >
 
         <LinearLayout
